tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-struct-field.diagnostic
diagnostic error code=P0001 family=parser message="expected : after field name" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-struct-field.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-struct-field.ari" bytes=28
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-struct-field.ari" line=2 column=9 end_line=2 end_column=12 byte_start=21 byte_end=24 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-struct-field.ari:2:9\n   |\n 2 |   value i64,\n   |         ^^^"
